--- a/src/OrchardCore.Themes/TheAdminAE/Views/Content-Service.SummaryAdmin.cshtml
+++ b/src/OrchardCore.Themes/TheAdminAE/Views/Content-Service.SummaryAdmin.cshtml
@@ -36,7 +36,7 @@
 
     @if (contentItem.Content.Service.WebsitePictures.Paths.Count > 0)
     {
-    <img class="img-thumbnail w-25 float-left mr-2" asset-src="@contentItem.Content.Service.WebsitePictures.Paths[0]" />
+    <img class="img-thumbnail w-25 float-left mr-2" asset-src="@contentItem.Content.Service.WebsitePictures.Paths[0]" img-width="300" img-resize-mode="Crop" />
     }
     else
     {
