--- a/src/OrchardCore.Themes/AffairesExtra/Views/Content-FarmMachineryAccessory.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Views/Content-FarmMachineryAccessory.liquid
@@ -253,7 +253,7 @@
             <div class="card mb-3">
                 <a href="{{ item | display_url }}">
                     {% if item.Content.FarmMachineryAccessory.WebsitePictures.Paths.size > 0 %}
-                    {{ item.Content.FarmMachineryAccessory.WebsitePictures.Paths[0] | asset_url | img_tag: alt: img_alt, class:'card-img-top' }}
+                    {{ item.Content.FarmMachineryAccessory.WebsitePictures.Paths[0] | asset_url | resize_url: 480 | img_tag: alt: img_alt, class:'card-img-top' }}
                     {% else %}
                     <img class="card-img-top" alt="no image" src="/AffairesExtra/img/noimage.png">
                     {% endif %}
