--- a/src/OrchardCore.Themes/AffairesExtra/Recipes/Snippets/landingpage.liquid
+++ b/src/OrchardCore.Themes/AffairesExtra/Recipes/Snippets/landingpage.liquid
@@ -56,7 +56,7 @@
                             <i class="fa fa-plus fa-3x"></i>
                         </div>
                     </div>
-                    <img class="img-fluid" src="{{ project.Project.Image.Paths.first | asset_url | resize_url: width:400, height: 300, mode: 'stretch' }}" alt="{{ project.DisplayText }}">
+                    <img class="img-fluid" src="{{ project.Project.Image.Paths.first | asset_url | resize_url: 400, 300, 'stretch' }}" alt="{{ project.DisplayText }}">
                 </div>
                 <div class="portfolio-caption">
                     <h4>{{ project.DisplayText }}</h4>
